# DataChallenge2026

./: .gitattributes  .gitignore  CLAUDE.md  README.md  TODO.md  check_data.py  debug_train.py  diagnostic_dinov3.ipynb  err.txt  evaluation.py  explainable_DINO_clean_trainval.ipynb  inject_noise.py  launch_amo.py  main.py  post_processing_inject_noise.py  post_processing_read_probe.py  pyproject.toml  raw_prediction.csv  read_probe.py  test.csv  test.py  test_predictions.csv  train.py  train_clean_trainval.py  train_lora.py  train_patch.py  val_examples.csv
config/: pipeline_default.yaml
config/models/: 2026-06-09_22-28-19_dino_unfreeze_v1.yaml  BEiT-1k-Face-55w.yaml  beit3_base_patch16_224.yaml  beit3_base_patch16_224_without_domainadaptation.yaml  cnn_4l.yaml  convnextv2.yaml  dino.yaml  dino_3_final_v0.yaml  (+30 more)
csv_to_submit/: compare_amo_vs_dino3.ipynb  compare_submissions.ipynb  dino_3_final_v0_noval_v2.yaml.csv  efficientnet_0025.csv  test_amo.csv  test_b16_full_3_stages_14317936.csv
notebooks/: diagnostic_dinov3.ipynb  explainable_DINO_clean_trainval.ipynb  gender_weights.ipynb
scripts/: convert_to_jpeg.py  eval_on_split.py  extract_embeddings.py  inspect_loader_sizes.py  make_split.py  mean_norm.py  mesogip.sbatch  mesogip_embed.sbatch  mesogip_xgboost.sbatch  run_amo.sbatch  run_cluster.sbatch  run_cluster_l.sbatch  run_cluster_l_embed.sbatch
src/: boost_dino copy.py  config.py  config_utils.py  data_loader.py  data_stats.py  data_utils.py  dataset.py  dino_conv.py  finetuning.py  lora.py  loss.py  metrics.py  models.py  path.py  run_domain_adaptation.py  run_linear_probing.py  run_lora.py  test.py  train.py  transforms.py  xgboost_dino.py
src_amo/: config_utils.py
(+81 files in other folders)
