[project]
name = "datachallenge2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas",
    "numpy",
    "tqdm",
    "torch",
    "torchvision",
    "PrettyTable",
    "matplotlib",
    "timm>=1.0.27",
    "torchinfo>=1.8.0",
    "mlflow>=3.12.0",
    "dagshub>=0.7.0",
    "scikit-learn>=1.8.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
