[project]
name = "datachallenge2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas",
    "numpy",
    "tqdm",
    "torch",
    "torchvision",
    "PrettyTable",
    "matplotlib",
    "timm>=1.0.27",
    "torchinfo>=1.8.0",
    "mlflow>=3.12.0",
    "dagshub>=0.7.0",
    "scikit-learn>=1.8.0",
    "gdown>=6.0.0",
    "kagglehub>=1.0.1",
    "kagglesdk>=0.1.24",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu",  marker = "sys_platform == 'darwin'" },
]
torchvision = [
    { index = "pytorch-cuda", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu",  marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
